KAlarm Change Log

=== Version 3.1.0 (KDE Applications 20.12) --- 25 October 2020 ===
+ Add option to show alarm message as a notification instead of in a window [KDE Bug 345922]
+ Don't execute display alarms while desktop notifications are inhibited.

=== Version 3.0.3 (KDE Applications 20.08.3) --- 25 October 2020 ===
+ Prevent resources being disabled at logout [KDE Bug 427722]
+ Fix regression introduced in version 3.0.0:
    Warn user if no active alarm calendar is enabled.

=== Version 3.0.2 (KDE Applications 20.08.2) --- 3 October 2020 ===
+ Fix repeat-at-login alarms not triggering when KAlarm starts.
+ If command generating text for display alarm fails, only display error message,
  not the display alarm, and don't redisplay the alarm on every restart.
+ Fix next trigger time shown as "Never" after using Try button for command display alarm, if command fails.
+ Display alarms in time order on startup (fixes regression).
+ Allow alarm list and template list to be sorted by clicking headers.
+ Fix inability to edit an existing calendar resource's configuration.
+ Fix memory leaks.

=== Version 3.0.1 (KDE Applications 20.08.1) --- 24 August 2020 ===
+ Fix inability to create alarms from templates, or load templates in edit dialogue [KDE Bug 425751]
+ Don't show spurious error message when deleting alarm template [KDE Bug 425751]

=== Version 3.0.0 (KDE Applications 20.08) --- 5 August 2020 ===
+ Fix infinite loop when evaluating next alarm to schedule.
+ Cancel command execution error tooltip when mouse moves to another alarm.

=== Version 2.80.0 (KDE Applications 20.08 beta) --- 30 June 2020 ===
+ Default to using file system resources instead of Akonadi resources.
+ Enable selection of multiple calendar files in Import Alarms dialogue.
+ Show alarm calendars sorted by name in calendars list.
+ Return to last used tab in Configuration dialogue when it is reopened.
+ Add option for a command alarm to not notify execution errors [KDE Bug 315401]