@@ -76,6 +76,7 @@ find_package(KF5GlobalAccel ${KF5_MIN_VERSION} REQUIRED)
 find_package(KF5GuiAddons ${KF5_MIN_VERSION} REQUIRED)
 find_package(KF5Holidays ${KF5_MIN_VERSION} CONFIG REQUIRED)
 find_package(KF5I18n ${KF5_MIN_VERSION} CONFIG REQUIRED)
+find_package(KF5IdleTime ${KF5_MIN_VERSION} CONFIG REQUIRED)
 find_package(KF5JobWidgets ${KF5_MIN_VERSION} REQUIRED)
 find_package(KF5KCMUtils ${KF5_MIN_VERSION} CONFIG REQUIRED)
 find_package(KF5KIO ${KF5_MIN_VERSION} CONFIG REQUIRED)
